fix(messages): long text wrap

--- a/application/static/scss/default.scss
+++ b/application/static/scss/default.scss
@@ -229,7 +229,8 @@ html, body {
 		font-size: 1.6rem;
 		max-width: 10rem;
 		min-width: 5rem;
-		width: 25%;
+		width: 10rem;
+		min-width: 10rem;
 	}
 
 	.message-text {
